Placate exception checker validation in operationObjectAssignUntyped. https://bugs.webkit.org/show_bug.cgi?id=227955 rdar://80503746

Reviewed by Michael Saboff.

JSTests:

* stress/exception-check-in-operationObjectAssignUntyped.js: Added.

Source/JavaScriptCore:

* dfg/DFGOperations.cpp:
(JSC::DFG::JSC_DEFINE_JIT_OPERATION):


Canonical link: https://commits.webkit.org/239659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279910 268f45cc-cd09-0410-ab3c-d52691b4dbfc